<resources>
    <string name="app_name">Savoir Maigrir en Vidéo</string>

    <string name="header_right_button">Je m\'inscris</string>

    <string name="menu_decouvrir">Découvrir</string>
    <string name="menu_bilan">Bilan minceur</string>
    <string name="menu_temoignages">Témoignages</string>
    <string name="menu_recettes">Recettes</string>
    <string name="menu_recette">Recette</string>
    <string name="menu_mon_compte">Mon compte</string>

    <string name="button_register">je m\'inscris</string>

    <string name="welcome_message">Bonjour, bienvenue sur le programme pour maigrir et être bien dans sa peau</string>
    <string name="terms_of_service">Conditions Générales d\'Utilisation</string>
    <string name="landing_1">Decouvrez le programme</string>
    <string name="landing_2">Faites votre bilan minceur personnalise en video</string>
    <string name="landing_3">Temoignages</string>
    <string name="landing_4">Recettes</string>

    <string name="recipe_entree">Entreé</string>
    <string name="recipe_salad">Salade</string>
    <string name="recipe_plat">Plat</string>
    <string name="recipe_dessert">Dessert</string>
    <string name="recipe_soup">Soupe</string>
    <string name="recipe_preparation">Préparation</string>

    <string name="moncompte_title">Vous n\'avez pas d\'abonnement en cours</string>
    <string name="moncompte_subtitle">Abonnez-vous dès maintenant pour 4,99 €/semaine (sans engagement)</string>
    <string name="moncompte_BulletTittle">En vous abonnant à ce service, vous aurez immédiatement accès :</string>
    <string name="moncompte_Bullet1">✔️ coaching vidéo quotidien de Jean-Michel Cohen</string>
    <string name="moncompte_Bullet2">✔️ plans de repas personnalisés selon votre profil</string>
    <string name="moncompte_Bullet3">✔️ des centaines de recettes diététiques savoureuses</string>
    <string name="moncompte_Bullet4">✔️ des conseils minceur en vidéo pour toutes les situations</string>
    <string name="moncompte_Bullet5">✔️ votre courbe de poids pour suivre vos progrès</string>
    <string name="moncompte_Bullet6">✔️ un support-client efficace pour vous aider à réussir</string>
</resources>
