<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1">

    <include
        android:id="@+id/headermenu"
        layout="@layout/header_menu"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/headermenu"
        android:elevation="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mon_compte_bg" />

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_orange_roundedcorners"
        android:onClick="onClick"
        android:text="@string/button_register"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_height="50dp" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/headermenu"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:paddingTop="10sp"
        android:text="@string/moncompte_title"
        android:textColor="@color/colorContenText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:paddingTop="5sp"
        android:text="@string/moncompte_subtitle"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="match_parent" />

    <TextView
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="21dp"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="15sp"
        android:text="@string/moncompte_BulletTittle"
        android:textColor="#FF771F"
        android:textSize="15sp"
        tools:layout_width="300sp" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText10"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="20sp"
        android:text="@string/moncompte_Bullet6"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="220sp" />

    <TextView
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText9"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingBottom="10sp"
        android:paddingLeft="20sp"
        android:text="@string/moncompte_Bullet5"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="220sp" />

    <TextView
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText8"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingBottom="10sp"
        android:paddingLeft="20sp"
        android:text="@string/moncompte_Bullet4"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="220sp" />

    <TextView
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText6"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingBottom="10sp"
        android:paddingLeft="20sp"
        android:text="@string/moncompte_Bullet3"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="220sp" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingBottom="10sp"
        android:paddingLeft="20sp"
        android:text="@string/moncompte_Bullet1"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="220sp" />

    <TextView
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText7"
        android:background="#00000000"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingBottom="10sp"
        android:paddingLeft="20sp"
        android:text="@string/moncompte_Bullet2"
        android:textColor="#000000"
        android:textSize="10sp"
        tools:layout_width="220sp" />



</RelativeLayout>