<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="anxa.com.smvideo.activities.MainActivity"
    android:background="@drawable/fullbackground">

    <include
        android:id="@+id/landingheader"
        layout="@layout/header_landing"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/landingheader">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/greeting_jmc"
                android:layout_weight="0.2"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/welcome_message"
                android:layout_weight="0.4"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:minLines="3"
                android:maxLines="4"/>
            <Button
                android:id="@+id/LandingRegisterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_register"
                android:textAllCaps="true"
                android:layout_weight="0.4"
                android:layout_gravity="center_vertical"
                style="@style/OrangeButton"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_weight="15">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/landing_img01"
                    android:layout_weight="60"
                    style="@style/LandingImage"
                    android:id="@+id/LandingImage1"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/landing_1"
                    android:layout_weight="40"
                    style="@style/LandingButton"
                    android:id="@+id/LandingDiscoverButton"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/landing_img02"
                    android:layout_weight="60"
                    android:layout_margin="0dp"
                    style="@style/LandingImage"
                    android:id="@+id/LandingImage2"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/landing_2"
                    android:layout_weight="40"
                    style="@style/LandingButton"
                    android:id="@+id/LandingBilanButton"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/landing_img03"
                    android:layout_weight="60"
                    android:layout_margin="0dp"
                    style="@style/LandingImage"
                    android:id="@+id/LandingImage3"

                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/landing_3"
                    android:layout_weight="40"
                    style="@style/LandingButton"
                    android:id="@+id/LandingTemoignagesButton"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/landing_img04"
                    android:layout_weight="60"
                    android:layout_margin="0dp"
                    style="@style/LandingImage"
                    android:id="@+id/LandingImage4"
                    />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/landing_4"
                    android:layout_weight="40"
                    style="@style/LandingButton"
                    android:id="@+id/LandingRecettesButton"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/terms_of_service"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>